k8s/ingress/api-gateway-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-service
  namespace: personal-finance
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
